--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
-    "react-native-fontawesome": "^5.7.0"
+    "react-native-fontawesome": "^5.7.0",
+    "styled-components": "^3.1.6"
   }
 }
